Add BigQuery retries parameters description

--- a/docs/deploy/deployment-option/cloud/managed-connectors/create-gcp-bigquery-connector.mdx
+++ b/docs/deploy/deployment-option/cloud/managed-connectors/create-gcp-bigquery-connector.mdx
@@ -86,6 +86,8 @@ on the **Create Connector** page:
    | `Upsert enabled` | Enables upsert functionality on the connector. |
    | `Delete enabled` | Enable delete functionality on the connector.
    | `Time partitioning type` | The time partitioning type to use when creating tables. |
+   | `BigQuery retry attempts` | The number of retry attempts that will be made per BigQuery request that fails with a backend error or a quota exceeded error. |
+   | `BigQuery retry attempts interval` | The minimum amount of time, in milliseconds, to wait between BigQuery backend or quota exceeded error retry attempts. |
 
 ## Map data
 
