--- a/docs/deploy/deployment-option/cloud/managed-connectors/create-jdbc-sink-connector.mdx
+++ b/docs/deploy/deployment-option/cloud/managed-connectors/create-jdbc-sink-connector.mdx
@@ -77,6 +77,10 @@ on the **Create Connector** page:
 | `Maximum retries` | The maximum number of times to retry on errors before failing the task. The default is `10`. |
 | `Retry backoff (ms)` | The time in milliseconds to wait before a retry attempt is made following an error. The default is `3000`. |
 | `Database dialect` | The name of the database dialect that should be used for this connector. By default. the connector automatically determines the dialect based upon the JDBC connection URL. Use if you want to override that behavior and specify a specific dialect. |
+| `Error tolerance` | Error tolerance response during connector operation. Default value is `none` and signals that any error will result in an immediate connector task failure. Value of `all` changes the behavior to skip over problematic records. |
+| `Dead Letter Queue Topic Name` | The name of the topic to be used as the dead letter queue (DLQ) for messages that result in an error when processed by this sink connector, or its transformations or converters. The topic name is blank by default, which means that no messages are to be recorded in the DLQ. |
+| `Dead Letter Queue Topic Replication Factor` | Replication factor used to create the dead letter queue topic when it doesn't already exist. |
+| `Enable Error Context Headers` | If true, add headers containing error context to the messages written to the dead letter queue. To avoid clashing with headers from the original record, all error context header keys, all error context header keys will start with `__connect.errors`. |
 
 ## Map data
 
