--- a/docs/deploy/deployment-option/cloud/managed-connectors/create-snowflake-connector.mdx
+++ b/docs/deploy/deployment-option/cloud/managed-connectors/create-snowflake-connector.mdx
@@ -68,6 +68,9 @@ on the **Create Connector** page:
 | `Buffer flush time` | The time in seconds to flush cached data. Default is 120. |
 | `Buffer size bytes` | Cumulative size of records buffered in memory per partition before triggering Snowflake ingestion. Default is 5000000. |
 | `Error tolerance` | Error tolerance response during connector operation. Default value is `none` and signals that any error will result in an immediate connector task failure. Value of `all` changes the behavior to skip over problematic records. |
+| `Dead Letter Queue Topic Name` | The name of the topic to be used as the dead letter queue (DLQ) for messages that result in an error when processed by this sink connector, or its transformations or converters. The topic name is blank by default, which means that no messages are to be recorded in the DLQ. |
+| `Dead Letter Queue Topic Replication Factor` | Replication factor used to create the dead letter queue topic when it doesn't already exist. |
+| `Enable Error Context Headers` | If true, add headers containing error context to the messages written to the dead letter queue. To avoid clashing with headers from the original record, all error context header keys, all error context header keys will start with `__connect.errors`. |
 
 ## Map data
 
