--- a/docs/deploy/deployment-option/cloud/managed-connectors/create-gcp-bigquery-connector.mdx
+++ b/docs/deploy/deployment-option/cloud/managed-connectors/create-gcp-bigquery-connector.mdx
@@ -90,7 +90,7 @@ on the **Create Connector** page:
    | `BigQuery retry attempts interval` | The minimum amount of time, in milliseconds, to wait between BigQuery backend or quota exceeded error retry attempts. |
    | `Error tolerance` | Error tolerance response during connector operation. Default value is `none` and signals that any error will result in an immediate connector task failure. Value of `all` changes the behavior to skip over problematic records. |
    | `Dead letter queue topic name` | The name of the topic to be used as the dead letter queue (DLQ) for messages that result in an error when processed by this sink connector, its transformations, or converters. The topic name is blank by default, which means that no messages are recorded in the DLQ. |
-   | `Dead Letter Queue Topic Replication Factor` | Replication factor used to create the dead letter queue topic when it doesn't already exist. |
+   | `Dead letter queue topic replication factor` | Replication factor used to create the dead letter queue topic when it doesn't already exist. |
    | `Enable Error Context Headers` | If true, add headers containing error context to the messages written to the dead letter queue. To avoid clashing with headers from the original record, all error context header keys, all error context header keys will start with `__connect.errors`. |
 
 ## Map data
