--- a/docs/deploy/deployment-option/cloud/managed-connectors/create-mongodb-sink-connector.mdx
+++ b/docs/deploy/deployment-option/cloud/managed-connectors/create-mongodb-sink-connector.mdx
@@ -61,7 +61,7 @@ on the **Create Connector** page:
 | `Data expiry time` | The expected interval between subsequent measurements for a time series. Possible values are `"seconds"`, `"minutes"` or `"hours"`.
 | `Error tolerance` | Error tolerance response during connector operation. Default value is `none` and signals that any error will result in an immediate connector task failure. Value of `all` changes the behavior to skip over problematic records. |
 | `Dead Letter Queue Topic Name` | The name of the topic to be used as the dead letter queue (DLQ) for messages that result in an error when processed by this sink connector, or its transformations or converters. The topic name is blank by default, which means that no messages are to be recorded in the DLQ. |
-| `Dead Letter Queue Topic Replication Factor` | Replication factor used to create the dead letter queue topic when it doesn't already exist. |
+| `Dead letter queue topic replication factor` | Replication factor used to create the dead letter queue topic when it doesn't already exist. |
 | `Enable error context headers` | When `true`, adds a header containing error context to the messages written to the dead letter queue. To avoid clashing with headers from the original record, all error context header keys, start with `__connect.errors`. |
 
 ## Map data
