Add Connectors Monitoring

--- a/docs/deploy/deployment-option/cloud/managed-connectors/index.mdx
+++ b/docs/deploy/deployment-option/cloud/managed-connectors/index.mdx
@@ -94,3 +94,6 @@ These sources and sinks work together to create a data pipeline that can move an
 
     The Snowflake Sink connector ingests and stores Redpanda structured data into a
     Snowflake database for analytics and decision-making.
+
+- [Connectors monitoring](../managed-connectors/monitor-connectors)
+
