--- a/docs/deploy/deployment-option/cloud/managed-connectors/monitor-connectors.mdx
+++ b/docs/deploy/deployment-option/cloud/managed-connectors/monitor-connectors.mdx
@@ -9,8 +9,7 @@ title: Monitor Connectors
 </head>
 
 
-Redpanda exports metrics for Managed Connectors through a Prometheus HTTPS endpoint for you to monitor connectors health.
-You can use Prometheus and Grafana to visualize the metrics and set up alerting.
+You can monitor connector health using the managed connector metrics, which Redpanda exports through a Prometheus HTTPS endpoint. You can use Prometheus and Grafana to visualize the metrics and set up alerts.
 
 ## Configure Prometheus
 
