--- a/docs/deploy/deployment-option/cloud/managed-connectors/monitor-connectors.mdx
+++ b/docs/deploy/deployment-option/cloud/managed-connectors/monitor-connectors.mdx
@@ -16,7 +16,7 @@ You can monitor connector health using the managed connector metrics, which Redp
 [Prometheus](https://prometheus.io/) is a system monitoring and alerting tool. It collects and stores metrics as time-series data identified by a metric name and key/value pairs.
 
 :::note
-You can quickly start by [running the Prometheus and Grafana locally](https://github.com/redpanda-data/observability/tree/main/cloud).
+You can quickly start by [running Prometheus and Grafana locally](https://github.com/redpanda-data/observability/tree/main/cloud).
 :::
 
 To configure and use Prometheus to monitor Redpanda metrics:
