--- a/docs/deploy/deployment-option/cloud/managed-connectors/monitor-connectors.mdx
+++ b/docs/deploy/deployment-option/cloud/managed-connectors/monitor-connectors.mdx
@@ -19,7 +19,7 @@ You can monitor connector health using the managed connector metrics, which Redp
 You can quickly start by [running Prometheus and Grafana locally](https://github.com/redpanda-data/observability/tree/main/cloud).
 :::
 
-To configure and use Prometheus to monitor Redpanda metrics:
+To configure and use Prometheus to monitor Redpanda managed connector metrics:
 
 1. Go to ** Overview > How to connect > Prometheus **. Click on the icon to the right next to the Prometheus YAML to copy its content into your clipboard.
 
