Added docs for Kafka key field name field for BigQuery connector

--- a/modules/deploy/pages/deployment-option/cloud/managed-connectors/create-gcp-bigquery-connector.adoc
+++ b/modules/deploy/pages/deployment-option/cloud/managed-connectors/create-gcp-bigquery-connector.adoc
@@ -100,6 +100,9 @@ on the *Create Connector* page:
 | `Delete enabled`
 | Enable delete functionality on the connector.
 
+| `Kafka key field name`
+| The name of the BigQuery table field for the Kafka key. Must be set when upsert or delete is enabled.
+
 | `Time partitioning type`
 | The time partitioning type to use when creating tables.
 
